0.1.1 2019-10-xx
    - [LibXML][LibXML;:Config] add .config-version method. Version of libxml2
      that the library was configured against (and bindings were built against).
0.1.0 2019-09-27
    - [LibXML::Parser] More secure default parser options. #23
      -- The parser defaults `network` and `expand-entities` have been changed from
         True to False.  This is partially in reponse to an equivalent ticket for
         the Perl 5 XML::LibXML module https://rt.cpan.org/Public/Bug/Display.html?id=118032
      -- The `dtd` option has been highlighted in the doc as a way of restoring these options
         in a secure and trusted environment and restoring Perl 5 XML::LibXML like access.
0.0.9 2019-09-23
    - [LibXML::ErrorHandler improvements for LibXSLT:
      -- catch input handler exceptions
      -- alllow for multiple '%s' arguments in generic errors
      -- display multiple errors
    - [LibXML::XPATH::Context] fixed object GC #22. Added $*XPATH-CONTEXT
    - Ported XML::XPath tests to xt/xpath/. Added methods for improved
      compatibility with  XML::XPath and XML modules:
      -- [LibXML::Element] add .attribs() [alias for .attributes()]
      -- [LibXML::Node] added:
         --- .nodes() method [alias for .childNodes()]
         --- .gist() method [alias for .Str()]
      -- [LibXML::Node::Set] added .is-equiv() method
      -- [LibXML::Text] add .text() [alias for data]
0.0.8 2019-09-17
    - [LibXML::Parser::Context] fixed object GC #21. Added $*XML-CONTEXT
      dynamic variable.
0.0.7 2019-09-13
    - [LibXML::SAX::Handler::SAX2]
      -- replace .finish method with .publish
      -- Add error handling callbacks: .warning, .error, fatalError, serror
    - [LibXML::Parser] combine with [LibXML].
0.0.6 2019-09-10
    - [LibXML::Native] Change cglobals from constants to subs (avoid compilation failures #16)
    - [LibXML::Native::Defs] rename library constants LIB -> XML2, BIND-LIB -> BIND-XML2; add CLIB for windows.
0.0.5 2019-09-08